--- a/DrzewoBST/DrzewoBST.vcxproj.filters
+++ b/DrzewoBST/DrzewoBST.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="FileManager.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="BST.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
